# translation_gym

./: .dockerignore  .gitignore  .gitmodules  C_metrics.sh  C_metrics_after.sh  Dockerfile  README.md  build.sh  check_functions.py  compute_C_metrics.py  compute_C_metrics_after.py  compute_metrics.py  main.py  metrics.sh  open_container.sh  prune.sh  prune_only.sh  requirements.txt  run.sh  run_C_metrics.sh  temp.txt
data/: README.md  datasets.json  datasets.yaml  docker-compose.yml
data/avl-tree/: Dockerfile  Makefile  avl-tree-test
data/coreutils/: .gitignore  Dockerfile  Dockerfile.cat  Dockerfile.split  Dockerfile.tail  Dockerfile.truncate  Dockerfile.uniq  README.md  copy_test_cases.sh  create_c_and_rust_versions.py  create_corpus.sh  download_coreutils.sh  patch_tests.sh
data/toy/: Makefile  common.h  compile_commands.json  functions.json  main.c  math_functions.c  math_functions.h  string_functions.c  string_functions.h  toy
data/urlparser/: .gitignore  Makefile  covered_funcs.txt  test.c  url.c
data/zopfli/: .gitignore  Dockerfile  Makefile  zopfli.c  zopfli.h
output/: metrics.json
output/avl-tree_0vXxo5bVq9/: Cargo.toml  analysis.json  bindgen_blocklist.txt  decls.txt  derefs.txt  graph.dot  log.json  unsafe_spans.txt
output/cat_1irjDx5pEM/: Cargo.toml  analysis.json  bindgen_blocklist.txt  decls.txt  derefs.txt  graph.dot  log.json  unsafe_spans.txt
output/cat_36BjRnDjej/: analysis.json  bindgen_blocklist.txt  build.rs  graph.dot  log.json  output.txt
output/cat_zcOtv4sbjm/: analysis.json  bindgen_blocklist.txt  log.json  output.txt
output/head_FLe492C4ga/: Cargo.toml  analysis.json  bindgen_blocklist.old  decls.txt  derefs.txt  graph.dot  log.json  unsafe_spans.txt
output/head_I0I39KQwWC/: analysis.json  bindgen_blocklist.txt  graph.dot  log.json  output.txt
output/pwd_6qKsqZZ16S/: Cargo.toml  analysis.json  bindgen_blocklist.txt  decls.txt  derefs.txt  graph.dot  log.json  unsafe_spans.txt
output/pwd_HlEz25W36w/: analysis.json  bindgen_blocklist.txt  graph.dot  log.json  output.txt
output/split_FPaq4tOajT/: analysis.json  bindgen_blocklist.old  decls.txt  derefs.txt  graph.dot  log.json  unsafe_spans.txt
output/split_GPUrJGwqSc/: analysis.json  bindgen_blocklist.old  (+2 more)
parsec/: FunctionVisitAction.cpp  FunctionVisitAction.h  FunctionVisitor.cpp  FunctionVisitorConsumer.cpp  FunctionVisitorConsumer.h  ToolActionWrapper.h  instrumentation.cpp  instrumentation.h  main.cpp
parserust/: README.md
rust_wrapper/: Cargo.toml  build.rs
rust_wrapper/src/: main.rs
tools/C_metrics/: CMakeLists.txt  MetricsVisitor.cpp  MetricsVisitor.h  MetricsVisitorConsumer.cpp  MetricsVisitorConsumer.h  main_metrics.cpp
tools/C_metrics/covered_functions/: cat_covered_funcs.txt
tools/c_metrics/: CMakeLists.txt  MetricsVisitor.cpp  MetricsVisitor.h  MetricsVisitorConsumer.cpp  MetricsVisitorConsumer.h  helpers.h  main.cpp
tools/metrics/: Cargo.toml  README.md
tools/metrics/example_code/src/: fun_method.rs  main.rs
tools/metrics/src/: laertes_helper.rs  lib.rs  pointer_counter.rs  unsafe_counter.rs  utils.rs
tools/parsec/: CMakeLists.txt  FunctionVisitAction.cpp  FunctionVisitAction.h  FunctionVisitor.cpp  FunctionVisitor.h  FunctionVisitorConsumer.h  ToolActionWrapper.cpp  instrumentation.cpp  instrumentation.h  main.cpp
tools/parserust/: Cargo.toml  analysis.json
tools/parserust/example_code/src/: main.rs
tools/parserust/src/: lib.rs  utils.rs  visitor.rs
translation_gym/: helpers.py  main.py  orchestrator.py  prompts.py  source_manager.py  translation_engine.py  translator.py  validator.py
(+672 files in other folders)
