[package]
name = "foo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "foo"

[dependencies]
libc= "0.2"

[build-dependencies]
bindgen = "0.71.1"
serde_json = "1.0.140"
glob = "0.3.2"